# 42-Python-OOP

./: README.md
Code Nexus/ex0/: stream_processor.py
Code Nexus/ex1/: data_stream.py
Code Nexus/ex2/: nexus_pipeline.py
CodeCultivation/: README.md
CodeCultivation/ex0/: ft_garden_intro.py
CodeCultivation/ex1/: ft_garden_data.py
CodeCultivation/ex2/: ft_plant_growth.py
CodeCultivation/ex3/: ft_plant_factory.py
CodeCultivation/ex4/: ft_garden_security.py
CodeCultivation/ex5/: ft_plant_types.py
CodeCultivation/ex6/: ft_garden_analytics.py
Cosmic Data/ex0/: space_station.py
Cosmic Data/ex1/: alien_contact.py
Cosmic Data/ex2/: space_crew.py
Data Archivist/ex0/: ft_ancient_text.py
Data Archivist/ex1/: ft_archive_creation.py
Data Archivist/ex2/: ft_stream_management.py
Data Archivist/ex3/: ft_vault_security.py
Data Archivist/ex4/: ft_crisis_response.py
Data Quest/: README.md
Data Quest/ex0/: ft_command_quest.py
Data Quest/ex1/: ft_score_analytics.py
Data Quest/ex2/: ft_coordinate_system.py
Data Quest/ex3/: ft_achievement_tracker.py
Data Quest/ex4/: ft_inventory_system.py
Data Quest/ex5/: ft_data_stream.py
Data Quest/ex6/: ft_data_alchemist.py
DataDeck/: battle.py  capacitor.py  tournament.py
DataDeck/ex0/: __init__.py  creature.py  factory.py
DataDeck/ex1/: capability.py  creature.py  factory.py
Garden Guardian/: README.md
Growing Code/: README.md
The Codex/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
The Matrix/ex1/: loading.py  pyproject.toml
(+23 files in other folders)
