[tool.poetry]
name = "the-matrix-ex1"
version = "1.0.0"
description = "Exercise 1: Loading Programs - The Matrix"
authors = ["Zion Resistance <resistance@zion.net>"]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
